--- a/style.css
+++ b/style.css
@@ -2,14 +2,12 @@
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-#main-play-area {
-  width: 640px;
-  height: 380px;
-  background-image: url('images/backgroun2.jpg_large');
-  background-size: cover;
-  margin:auto;
+canvas {
+  display:block;
+  border: 1px solid black;
+  margin: auto;
+  background-color: black
 }
-
 h1 {
   margin: auto;
   text-align: center;
