--- a/style.css
+++ b/style.css
@@ -1,33 +1,24 @@
 *{
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
-
+body{
+  background-color: white;
+}
 canvas {
   display:block;
   border: 1px solid black;
   margin: auto;
-  background-color: black
+  
 }
 h1 {
   margin: auto;
   text-align: center;
   height: 50px;
   margin:5px;
+  color: purple;
 }
-#player {
-  width: 50px;
-  height: 50px;
-  position: relative;
-  left: 10px;
-  top: 150px;
-  transform: rotate(+90deg);
-}
-#instructions-text {
-  position: relative;
-  color: white;
-  left: 35px;
-  top: 0px;
-}
+
+
 #start-button {
   position: relative;
   color: white;
@@ -37,14 +28,16 @@ h1 {
 #start-button:hover {
   cursor: pointer;
 }
-
-.laser {
-  width: 20px;
-  height: 20px;
-  position: relative;
+#gameOver {
+  position: absolute;
+  visibility: hidden;
 }
-.asteroid {
-    width: 30px;
-    height: 30px;
-    position: absolute;
-  }
+
+#startMenu {
+  position: absolute;
+  margin:auto;
+}
+
+.starGame {
+  width: 30px;
+}
