--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-
- @font-face { font-family: modithorsongrad; src: url('modithorsongrad.ttf'); } 
- @font-face { font-family: modithorsonexpandital; src: url('modithorsonexpandital.ttf'); } 
+@font-face { font-family: modithorsongrad; src: url('modithorsongrad.ttf'); } 
+@font-face { font-family: modithorsonexpandital; src: url('modithorsonexpandital.ttf'); } 
 
 
 *{
@@ -9,56 +8,60 @@ text-shadow: -1px 0 yellow, 0 1px yellow, 1px 0 yellow, 0 -1px yellow;
 font-size: 40px;
 }
 body{
-  background-color: black;
+ background-color: black;
 }
 canvas {
-  display:block;
+ display:block;
 
-  margin: 0 auto;
-  padding-top: 80px;
-  
+ margin: 0 auto;
+ padding-top: 80px;
+ 
 }
 h1 {
-  padding-top: 15px 0 15px 0;
-  margin: auto;
-  text-align: center;
-  height: 50px;
-  margin:5px;
-  margin-top: 20px;
-  color:black;
-  font-size: 100px;
+ padding-top: 15px 0 15px 0;
+ margin: auto;
+ text-align: center;
+ height: 10%;
+ margin:5px;
+ margin-top: 20px;
+ color:black;
+ font-size: 100px;
 }
 
 #scoreboard {
-  color:black;
-  font-family: modithorsongrad;
-  text-shadow: -1px 0 yellow, 0 1px yellow, 1px 0 yellow, 0 -1px yellow;
-  margin-left: 1400px;
-  margin-top: 200px;
-  position: absolute;
-  width: 400px;
-  
+ color:black;
+ font-family: modithorsongrad;
+ text-shadow: -1px 0 yellow, 0 1px yellow, 1px 0 yellow, 0 -1px yellow;
+ /* margin-left: 1400px; */
+ margin-left: 300%;
+ /* margin-top: 200px; */
+ margin-top: 45%;
+ position: absolute;
+ width: 400px;
+ 
 }
 
 #score {
-  color:black;
-  font-family: modithorsongrad;
-  text-shadow: -1px 0 yellow, 0 1px yellow, 1px 0 yellow, 0 -1px yellow;
-  height: 10px;
+ color:black;
+ font-family: modithorsongrad;
+ text-shadow: -1px 0 yellow, 0 1px yellow, 1px 0 yellow, 0 -1px yellow;
+ height: 10px;
 
 }
 #Board {
-  display: flex;
-  flex-direction: column;
-  width: 25%;
-  font-size: 10px;
-  position: absolute;
-  font-size: 12px;
-  align-content: center;
+ display: flex;
+ flex-direction: column;
+ width: 25%;
+ font-size: 10px;
+ position: absolute;
+ font-size: 12px;
+ align-content: center;
 }
 h3 {
-  margin-left: 90px;
-  margin-top: 200px;
+ margin-left: 20%;
+ margin-top: 45%;
 }
+
+
 
 
