--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 {
  padding-top: 15px 0 15px 0;
  margin: auto;
  text-align: center;
- height: 10%;
+ height: 50px;
  margin:5px;
  margin-top: 20px;
  color:black;
@@ -32,10 +32,8 @@ h1 {
  color:black;
  font-family: modithorsongrad;
  text-shadow: -1px 0 yellow, 0 1px yellow, 1px 0 yellow, 0 -1px yellow;
- /* margin-left: 1400px; */
- margin-left: 300%;
- /* margin-top: 200px; */
- margin-top: 45%;
+ margin-left: 1400px;
+ margin-top: 200px;
  position: absolute;
  width: 400px;
  
@@ -58,10 +56,7 @@ h1 {
  align-content: center;
 }
 h3 {
- margin-left: 20%;
- margin-top: 45%;
+ margin-left: 90px;
+ margin-top: 200px;
 }
-
-
-
 
